[project]
name = "swebench-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "polars>=1.31.0",
    "st-diff-viewer>=1.0.7",
    "streamlit>=1.46.1",
    "streamlit-scroll-navigation>=1.2.1",
    "streamlit-shortcuts>=1.1.5",
]
